--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -8,22 +8,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Home</a>
+        <a href="/" class="navbar-brand">PeepPosts</a>
       </div>
-      <nav class="collapse navbar-collapse" role="navigation">
+      <nav class="collapse navbar-collapse navbar-right" role="navigation">
         <ul class="nav navbar-nav">
-          <li>
-            <a href="#">Category</a>
-          </li>
-          <li>
-            <a href="#">Category</a>
-          </li>
-          <li>
-            <a href="#">Category</a>
-          </li>
-          <li>
-            <a href="#">Category</a>
-          </li>
+          <li><a href="{{ pathFor 'posts' }}">Home</a></li>
+          <li><a href="{{ pathFor 'about' }}">About</a></li>
         </ul>
       </nav>
     </div>
