--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -1,8 +1,19 @@
 <body>
-  {{renderPage}}
+  {{ renderPage }}
 </body>
 
 <template name="layout">
-  {{> navbar}}
-  {{> yield}}
+  {{ > navbar }}
+  {{ > jumbotron }}
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-sm-lg-12">
+        <div class="panel">
+          <div class="panel-body">
+            {{ > yield }}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </template>
