--- a/client/templates/posts/posts.html
+++ b/client/templates/posts/posts.html
@@ -1,7 +1,98 @@
 <template name="posts">
-  <div id="masthead">
-    <p>
-      hi there
-    </p>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-info btn-lg center" data-toggle="modal" data-target="#postModal">
+    Talk about something!
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="myPostModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myPostModalLabel">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+      <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
+    </div>
+    <div class="col-md-10 col-sm-9">
+      <small>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </small>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
+      Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
+      dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+      Aliquam in felis sit amet augue.</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+      <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
+    </div>
+    <div class="col-md-10 col-sm-9">
+      <small>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </small>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+      <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
+    </div>
+    <div class="col-md-10 col-sm-9">
+      <small>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </small>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
+      Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
+      dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+      Aliquam in felis sit amet augue.</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+      <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
+    </div>
+    <div class="col-md-10 col-sm-9">
+      <small>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </small>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
+      Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
+      dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+      Aliquam in felis sit amet augue.</p>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+      <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
+    </div>
+    <div class="col-md-10 col-sm-9">
+      <small>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </small>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
+      Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
+      dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
+      Aliquam in felis sit amet augue.</p>
+    </div>
+  </div>
+
 </template>
