--- a/client/templates/posts/posts.html
+++ b/client/templates/posts/posts.html
@@ -22,10 +22,8 @@
       </div>
     </div>
   </div>
-
   <hr>
-
-  <div class="row">
+  <div class="row post">
     <div class="col-md-2 col-sm-3 text-center">
       <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
     </div>
@@ -37,22 +35,7 @@
       Aliquam in felis sit amet augue.</p>
     </div>
   </div>
-
-  <hr>
-
-  <div class="row">
-    <div class="col-md-2 col-sm-3 text-center">
-      <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
-    </div>
-    <div class="col-md-10 col-sm-9">
-      <small>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </small>
-      <p>Lorem ipsum dolor sit amet.</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="row">
+  <div class="row post">
     <div class="col-md-2 col-sm-3 text-center">
       <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
     </div>
@@ -64,10 +47,7 @@
       Aliquam in felis sit amet augue.</p>
     </div>
   </div>
-
-  <hr>
-
-  <div class="row">
+  <div class="row post">
     <div class="col-md-2 col-sm-3 text-center">
       <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
     </div>
@@ -79,10 +59,7 @@
       Aliquam in felis sit amet augue.</p>
     </div>
   </div>
-
-  <hr>
-
-  <div class="row">
+  <div class="row post">
     <div class="col-md-2 col-sm-3 text-center">
       <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
     </div>
@@ -94,5 +71,4 @@
       Aliquam in felis sit amet augue.</p>
     </div>
   </div>
-
 </template>
