--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -1,8 +1,8 @@
 <template name="navbar">
-  <header class="navbar navbar-default navbar-fixed-top" role="banner">
+  <nav class="navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -10,12 +10,14 @@
         </button>
         <a href="/" class="navbar-brand">PeepPosts</a>
       </div>
-      <nav class="collapse navbar-collapse navbar-right" role="navigation">
-        <ul class="nav navbar-nav">
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="{{ pathFor 'posts' }}">Home</a></li>
           <li><a href="{{ pathFor 'about' }}">About</a></li>
+          <li><a href="#">Sign In</a></li>
+          <li><a href="{{ pathFor 'profile' }}">Edit Profile</a></li>
         </ul>
-      </nav>
+      </div>
     </div>
-  </header>
+  </nav>
 </template>
