--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -14,8 +14,13 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="{{ pathFor 'posts' }}">Home</a></li>
           <li><a href="{{ pathFor 'about' }}">About</a></li>
-          <li><a href="#">Sign In</a></li>
-          <li><a href="{{ pathFor 'profile' }}">Edit Profile</a></li>
+          {{ #if currentUser }}
+            <li><a href="{{ pathFor 'profile' }}">Edit Profile</a></li>
+            <li><a href="sign-out">Sign Out</a></li>
+          {{ else }}
+            <li><a href="sign-in">Sign In</a></li>
+            <li><a href="sign-up">Sign Up</a></li>
+          {{ /if }}
         </ul>
       </div>
     </div>
