--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -3,17 +3,32 @@
 </body>
 
 <template name="layout">
-  {{ > navbar }}
-  {{ > jumbotron }}
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12 col-sm-lg-12">
-        <div class="panel">
-          <div class="panel-body">
-            {{ > yield }}
+  {{ #if currentUser }}
+    {{ > navbar }}
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-sm-lg-12">
+          <div class="panel">
+            <div class="panel-body">
+              {{ > yield }}
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  {{ else }}
+    {{ > navbar }}
+    {{ > jumbotron }}
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-sm-lg-12">
+          <div class="panel">
+            <div class="panel-body">
+              {{ > yield }}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  {{ /if }}
 </template>
