--- a/client/templates/profile/profile.html
+++ b/client/templates/profile/profile.html
@@ -5,8 +5,11 @@
     <div class="col-md-6 col-md-offset-3">
       <div class="text-center">
         <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
-        <h6>Upload a different photo...</h6>
-        <input type="file" name="profileImage" id="profileImage" class="form-control">
+        <h4>Upload a new profile photo...</h4>
+        <form class="edit-profile" enctype="multipart/form-data">
+          <input type="file" name="profileImage" id="profileImage" class="form-control">
+          <input type="submit" value="Udate Photo" id="upload-btn" class="btn btn-success btn-sm">
+        </form>
       </div>
     </div>
   </div>
