--- a/client/templates/posts/posts.html
+++ b/client/templates/posts/posts.html
@@ -29,7 +29,7 @@
       <img src="//placehold.it/100" style="width:100px;height:100px" class="img-circle">
     </div>
     <div class="col-md-10 col-sm-9">
-      <medium>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </medium>
+      <small>Posted by <strong>Marcus</strong> &#64; <i>8-25-2015</i> </small>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate.
       Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis
       dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan.
